--- a/env.example
+++ b/env.example
@@ -1,1 +1,7 @@
-GEMINI_API_KEY=your_api_key_here
+# Google Gemini API Configuration
+GOOGLE_GENERATIVE_AI_API_KEY=your_gemini_api_key_here
+
+# LinkedIn API Configuration
+LINKEDIN_CLIENT_ID=your_linkedin_client_id_here
+LINKEDIN_CLIENT_SECRET=your_linkedin_client_secret_here
+LINKEDIN_REDIRECT_URI=http://localhost:3000/api/auth/linkedin/callback
